[gd_scene load_steps=5 format=2]

[ext_resource path="res://TankBattle_Assets/assets/sprite/bullet.png" type="Texture" id=1]
[ext_resource path="res://bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.3262, 9.12368 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 9.88053 )
rotation = 1.57543
scale = Vector2( 0.176568, 0.176568 )
frames = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.0720018, 9.89932 )
scale = Vector2( 0.477751, 0.990068 )

[node name="AncL" type="Position2D" parent="."]
position = Vector2( -2.58891, -0.319508 )

[node name="AncR" type="Position2D" parent="."]
position = Vector2( 2.6278, -0.292187 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
